# agentic-dev

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: cli.py  example_llm_direct.py  example_llm_prompted.py  example_llm_rag.py  example_llm_structured.py  llm.py  prompts.py  settings.py  utils.py
src/vector_store/: chroma_vector_store.py  embeddings.py  pg_vector_store.py  vector_store.py
tests/: test_llm.py
