[project]
name = "agentic-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "langchain>=1.2.15",
    "langchain-classic>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
    "langchain-postgres>=0.0.17",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.10.0",
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.10",
    "tiktoken>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
